--- a/src/scss/base/_variable.scss
+++ b/src/scss/base/_variable.scss
@@ -1,21 +1,27 @@
 //theme color declaration
 $theme-primary: #0057fc;
 $theme-secondary: #ffe815;
-$theme-tertiary: #FF5B15;
+$theme-tertiary: #ff5b15;
+$theme-dark: #0a0e1a;
+$theme-light: #b1b4ba;
 $theme-accent: #ffd06c;
-$theme-accent-2: #FBF6EF;
-$theme-accent-3: #001C52;
-$theme-accent-4: #FFF4EE;
+$theme-accent-2: #fbf6ef;
+$theme-accent-3: #001c52;
+$theme-accent-4: #fff4ee;
 
 //theme common color declaration
-$common-dark: #0a0e1a;
-$common-dark-solid: #000000;
-$common-light: #b1b4ba;
-$common-light-solid: #ffffff;
-$common-light-gray: #57595c;
+$common-dark: #000000;
+$common-light: #ffffff;
+$paragraph: #57595c;
 
 //theme border color declaration
 $theme-border: hsla(0, 0%, 100%, 0.2);
+
+//custom color
+$iceberg: #d6f0ff;
+$sandyBeach: #ffe9c9;
+$amour: #ffe4fb;
+$whiteRock: #e2ead7;
 
 //color root generator
 $color: (
@@ -23,6 +29,8 @@ $color: (
     "primary": $theme-primary,
     "secondary": $theme-secondary,
     "tertiary": $theme-tertiary,
+    "dark": $theme-dark,
+    "light": $theme-light,
     "accent": $theme-accent,
     "accent-2": $theme-accent-2,
     "accent-3": $theme-accent-3,
@@ -30,24 +38,19 @@ $color: (
   ),
 
   "heading": (
-    "dark": $common-dark,
-    "light": $common-light-solid,
+    "dark": $theme-dark,
+    "light": $common-light,
   ),
-
   "paragraph": (
-    "dark": $common-light-gray,
+    "dark": $paragraph,
     "light": $common-light,
   ),
   "border": (
     "color": $theme-border,
-    "dark": $common-light-gray,
   ),
   "common": (
     "dark": $common-dark,
-    "dark-solid": $common-dark-solid,
     "light": $common-light,
-    "light-solid": $common-light-solid,
-    "gray": $common-light-gray,
   ),
 );
 
@@ -55,11 +58,10 @@ $color: (
 $theme-prefix: "ts";
 $space-count: 50;
 
-
 /* Responsive Query Setup*/
-$xxl: 'only screen and (min-width: 1400px) and (max-width: 1660px)';
-$xl: 'only screen and (min-width: 1200px) and (max-width: 1399.99px)';
-$lg: 'only screen and (min-width: 992px) and (max-width: 1199.99px)';
-$md: 'only screen and (min-width: 768px) and (max-width: 991.99px)';
-$sm: 'only screen and (min-width: 576px) and (max-width: 767.99px)'; 
-$xs: '(max-width: 767.99px)';
+$xxl: "only screen and (min-width: 1400px) and (max-width: 1660px)";
+$xl: "only screen and (min-width: 1200px) and (max-width: 1399.99px)";
+$lg: "only screen and (min-width: 992px) and (max-width: 1199.99px)";
+$md: "only screen and (min-width: 768px) and (max-width: 991.99px)";
+$sm: "only screen and (min-width: 576px) and (max-width: 767.99px)";
+$xs: "(max-width: 767.99px)";
